Version 1.33 (??, 2004) - "??"

Steve took a quick break from retirement to whip together the spinball emulation.. (gerrit add more text here)

Bugs Fixed
----------

-Fixed some bugs in 8051 cpu core
  [Steve Ellenoff]

New Features
------------


- Spinball emulation including full Sound and DMD support
(Big thanks to inkochnito for posting links to both the manual and rom on the forum so we could access them)
  [Steve Ellenoff, Gerrit Volkenborn]

- Added External Hardware Addressing to 8051 cpu core
- Added support for Serial UART mode 1 to 8051
  [Steve Ellenoff]



Version 1.32 (May 1, 2004) - "MayDay Edition"
-------------------------------------------------------------
Not a lot of new stuff in here, but this release is needed to ensure people can enjoy
PinMAME for a while without any new glitches that we might introduce by switching
over to the new MAME core architecture started with MAME version 0.79;
We have already ported all the drivers and self-made CPU cores, and we ran into some
serious problems, so this might take a while...

Apart from that, some improvements were made to the existing code, especially for
the GTS80A games. Tom succeeded in emulating the Votrax chip closer to the real thing
than we might ever get, so you will now listen to the original phonemes the chip
produces in all their four possible intonations (try the attract mode of "Cavaleiro
Negro" and wait for him to sing to you...)! :)
Also, the timer bug with the 6532 RRIOT chip was corrected, so we could re-install
the unhacked version of timer.c again. Any slowdown problems on Gottlieb games
should be a thing of the past now, and the slam tilt is working again too.
Tom brought back the long-lost Hankin sound emulation, too. Thanks a lot!

Furthermore, there was a new CPU included that's used on the early Zaccaria
single-player games, like Strike, or Ski Jump: The National Semiconductor SC/MP,
or "Scamp", as it's commonly called... a most peculiar piece of Processor history.
